fix: maintain CSS-in-JS demo integrity and improve CI build
- Restore CSS imports in main.tsx for proper functionality
- Keep CDN fallback links in HTML for reliability
- Add cache clearing step in GitHub Actions workflow
- Ensure CSS-in-JS demonstrations work as intended

--- a/.github/workflows/deploy-examples.yml
+++ b/.github/workflows/deploy-examples.yml
@@ -52,6 +52,13 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
+      - name: Clear npm cache and reinstall design-tokens
+        run: |
+          cd packages/examples
+          npm cache clean --force
+          pnpm remove @choiceform/design-tokens
+          pnpm add @choiceform/design-tokens@0.1.2
+
       - name: Build examples
         run: |
           cd packages/examples
