--- a/.github/workflows/deploy-examples.yml
+++ b/.github/workflows/deploy-examples.yml
@@ -52,12 +52,14 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: Clear npm cache and reinstall design-tokens
+      - name: Clear cache and reinstall design-tokens  
         run: |
           cd packages/examples
-          npm cache clean --force
+          rm -rf node_modules/.vite
           pnpm remove @choiceform/design-tokens
-          pnpm add @choiceform/design-tokens@0.1.2
+          pnpm add @choiceform/design-tokens@0.1.2 --no-frozen-lockfile
+          # 验证安装
+          ls -la node_modules/@choiceform/design-tokens/dist/
 
       - name: Build examples
         run: |
