fix: build design-tokens package in CI before examples
- Workspace environment prioritizes local packages over npm
- Build local design-tokens to generate dist/ directory
- Remove complex cache clearing steps - not needed with workspace

--- a/.github/workflows/deploy-examples.yml
+++ b/.github/workflows/deploy-examples.yml
@@ -52,14 +52,10 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: Clear cache and reinstall design-tokens  
+      - name: Build design tokens (required for workspace)
         run: |
-          cd packages/examples
-          rm -rf node_modules/.vite
-          pnpm remove @choiceform/design-tokens
-          pnpm add @choiceform/design-tokens@0.1.2
-          # 验证安装
-          ls -la node_modules/@choiceform/design-tokens/dist/
+          cd packages/design-tokens
+          pnpm run build
 
       - name: Build examples
         run: |
