--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
   "scripts": {
     "build": "pnpm -r build",
     "dev": "pnpm --filter examples dev",
-    "dev:tokens:js": "pnpm --filter @choiceform/design-js-tokens dev",
-    "dev:tokens:scss": "pnpm --filter @choiceform/design-scss-tokens dev",
+    "dev:tokens": "pnpm --filter @choiceform/design-tokens dev",
     "type-check": "pnpm -r type-check",
-    "lint:css": "pnpm --filter @choiceform/design-js-tokens lint:css",
-    "lint:css:fix": "pnpm --filter @choiceform/design-js-tokens lint:css:fix",
+    "lint:css": "pnpm --filter @choiceform/design-tokens lint:css",
+    "lint:css:fix": "pnpm --filter @choiceform/design-tokens lint:css:fix",
     "clean": "pnpm -r exec rm -rf dist node_modules",
     "dev:examples": "pnpm --filter @choiceform/design-tokens-examples dev",
     "build:examples": "pnpm --filter @choiceform/design-tokens-examples build"
