Fix pnpm lockfile compatibility in CI
- Change from --frozen-lockfile to --no-frozen-lockfile
- Resolve ERR_PNPM_NO_LOCKFILE error in AWS Amplify build environment
- Allow pnpm to install dependencies without strict lockfile matching

--- a/amplify.yml
+++ b/amplify.yml
@@ -7,7 +7,7 @@ applications:
         preBuild:
           commands:
             - npm install -g pnpm
-            - pnpm install --frozen-lockfile
+            - pnpm install --no-frozen-lockfile
             - cd packages/design-tokens
             - pnpm build
             - cd ../..
