Fix postBuild path issue
- Change ls command to run from correct directory
- Ensure postBuild phase can find packages/examples/dist/
- Build artifacts are properly generated and located

--- a/amplify.yml
+++ b/amplify.yml
@@ -20,7 +20,7 @@ applications:
         postBuild:
           commands:
             - echo "Build completed successfully"
-            - ls -la packages/examples/dist/
+            - cd packages/examples && ls -la dist/
       artifacts:
         baseDirectory: packages/examples/dist
         files:
