--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -19,6 +19,7 @@
     "tinycolor2": "1.6.0"
   },
   "devDependencies": {
+    "@choiceform/design-tokens": "workspace:*",
     "@babel/preset-react": "^7.27.1",
     "@babel/preset-typescript": "^7.27.1",
     "@choiceform/icons-react": "^1.1.4",
